Infer present player taxation data from Item Pages to mod's config
Signed-off-by: 0xar-ds <sadden-rope-sleek@duck.com>