@@ -1,8 +1,11 @@
 package com.github.mkram17.bazaarutils.utils.bazaar.components;
 
+import com.github.mkram17.bazaarutils.config.BUConfig;
+import com.github.mkram17.bazaarutils.config.util.ConfigUtil;
 import com.github.mkram17.bazaarutils.misc.NotificationType;
 import com.github.mkram17.bazaarutils.utils.PlayerActionUtil;
 import com.github.mkram17.bazaarutils.utils.Util;
+import com.github.mkram17.bazaarutils.utils.bazaar.PlayerAccountUpgrades;
 import com.github.mkram17.bazaarutils.utils.bazaar.market.order.OrderInfo;
 import com.github.mkram17.bazaarutils.utils.bazaar.market.order.TransactionType;
 import com.github.mkram17.bazaarutils.utils.minecraft.components.LoreParser;
@@ -63,11 +66,14 @@ public final class InstantSellParser {
     /** "Total: 532.2 coins" — confirmed from lore dump */
     private static final Pattern PRICE_PATTERN = Pattern.compile("Total: (?<price>[\\d,.]+) coins");
 
-    /** Present when there are no buy orders for this item */
-    private static final Pattern NO_ORDERS_PATTERN = Pattern.compile("There are no Buy Orders!");
+    /** Present when there are no buy orders for this item / the player doesn't hold essence to sell for it */
+    private static final Pattern NO_INVENTORY_OR_ORDERS_PATTERN = Pattern.compile("No one is buying!|There are no Buy Orders!|None to sell in your inventory!");
 
     /** "Inventory: 896 items" or "Inventory: None" */
     private static final Pattern INVENTORY_PATTERN = Pattern.compile("Inventory: (?<inv>.+)");
+
+    /** "Current tax: 1%" */
+    private static final Pattern TAX_PATTERN = Pattern.compile("Current tax: (?<tax>[\\d.]+)%");
 
     public static Optional<InstantSellResult> parseProductPageOrder(ItemStack sellInstantlyStack) {
         List<Component> lines = LoreParser.lines(sellInstantlyStack);
@@ -75,7 +81,7 @@ public final class InstantSellParser {
         // Name is still read positionally — line 0 is always the item name
         // and is structurally stable across both the orders/no-orders cases.
         String name = lines.isEmpty() ? null
-                : lines.get(0).getSiblings().stream()
+                : lines.getFirst().getSiblings().stream()
                   .map(Component::getString)
                   .map(String::trim)
                   .filter(s -> !s.isEmpty())
@@ -89,26 +95,32 @@ public final class InstantSellParser {
         }
 
         String amountStr = null;
-        String priceStr  = null;
+        String priceStr = null;
+        String taxStr = null;
         boolean noInventory = false;
-        boolean noOrders    = false;
+        boolean noOrders = false;
 
         for (Component line : lines) {
             String plain = line.getString();
-            Matcher m;
 
-            if (!noInventory && (m = INVENTORY_PATTERN.matcher(plain)).find()) {
-                noInventory = m.group("inv").trim().equalsIgnoreCase("None");
-            } else if (NO_ORDERS_PATTERN.matcher(plain).find()) {
+            Matcher matcher;
+
+            if (NO_INVENTORY_OR_ORDERS_PATTERN.matcher(plain).find()) {
                 noOrders = true;
                 break;
-            } else if (amountStr == null && (m = AMOUNT_PATTERN.matcher(plain)).find()) {
-                amountStr = m.group("amount");
-            } else if (priceStr == null && (m = PRICE_PATTERN.matcher(plain)).find()) {
-                priceStr = m.group("price");
             }
 
-            if (amountStr != null && priceStr != null) break;
+            if (!noInventory && (matcher = INVENTORY_PATTERN.matcher(plain)).find()) {
+                noInventory = matcher.group("inv").trim().startsWith("None");
+            } else if (amountStr == null && (matcher = AMOUNT_PATTERN.matcher(plain)).find()) {
+                amountStr = matcher.group("amount");
+            } else if (priceStr == null && (matcher = PRICE_PATTERN.matcher(plain)).find()) {
+                priceStr = matcher.group("price");
+            } else if (taxStr == null && (matcher = TAX_PATTERN.matcher(plain)).find()) {
+                taxStr = matcher.group("tax");
+            }
+
+            if (amountStr != null && priceStr != null && taxStr != null) break;
         }
 
         if (noInventory) {
@@ -130,11 +142,19 @@ public final class InstantSellParser {
         }
 
         try {
-            int volume          = Integer.parseInt(amountStr.replace(",", "").trim());
-            double totalPrice   = Double.parseDouble(priceStr.replace(",", "").trim());
+            int volume = Integer.parseInt(amountStr.replace(",", "").trim());
+            double totalPrice = Double.parseDouble(priceStr.replace(",", "").trim());
             double pricePerUnit = Math.round(totalPrice / volume * 10) / 10.0;
 
             OrderInfo result = new OrderInfo(name, TransactionType.Side.BUY, null, volume, pricePerUnit, null);
+
+            if (taxStr != null) {
+                try {
+                    reconcileTax(Double.parseDouble(taxStr.trim()));
+                } catch (Exception e) {
+                    Util.logError("parseProductPageOrder: failed to parse tax '%s'".formatted(taxStr), e);
+                }
+            }
 
             PlayerActionUtil.notifyAll("InstantSell (item page) parsed: %s %dx@%.4f".formatted(name, result.getVolume(), result.getPricePerItem()), NotificationType.GUI);
 
@@ -145,5 +165,23 @@ public final class InstantSellParser {
 
             return Optional.empty();
         }
+    }
+
+    private static void reconcileTax(double observedPercent) {
+        for (PlayerAccountUpgrades.BazaarFlipper tier : PlayerAccountUpgrades.BazaarFlipper.values()) {
+            if (Math.round(tier.getUserBazaarTax() * 10) == Math.round(observedPercent * 10)) {
+                if (BUConfig.USER_BAZAAR_FLIPPER_ACCOUNT_UPGRADE != tier) {
+                    Util.logMessage("reconcileTax: %s → %s (observed %.4g%%)".formatted(BUConfig.USER_BAZAAR_FLIPPER_ACCOUNT_UPGRADE, tier, observedPercent));
+
+                    BUConfig.USER_BAZAAR_FLIPPER_ACCOUNT_UPGRADE = tier;
+                    ConfigUtil.scheduleConfigSave();
+
+                    PlayerActionUtil.notifyAll("Bazaar Flipper tier auto-detected as %s from observed tax; saved to your configuration file.".formatted(tier.name()));
+                }
+                return;
+            }
+        }
+
+        Util.logMessage("reconcileTax: observed %.4g%% matches no BazaarFlipper tier — ignoring".formatted(observedPercent));
     }
 }
